<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp">

    <TextView
        android:id="@+id/tvAlbumName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/album_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etAlbumName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/album_name_hint"
        android:inputType="textCapSentences|textPersonName" />

    <TextView
        android:id="@+id/tvArtistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artist_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etArtistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/artist_name_hint"
        android:inputType="textCapWords"
        android:maxLength="32"/>

    <TextView
        android:id="@+id/tvReleaseYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_year"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etReleaseYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/release_year_hint"
        android:inputType="number"
        android:maxLength="4"/>

    <CheckBox
        android:id="@+id/cbOfficial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/official_hint" />

    <TextView
        android:id="@+id/rtRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/rating"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/rbRating"
        style="@android:style/Widget.DeviceDefault.RatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:rating="0"
        android:stepSize="0.5" />

    <Button
        android:id="@+id/btCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create" />

</LinearLayout>